--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Hadizelleya.github.io/3arbasat/",
+  "homepage": "https://Hadizelleya.github.io/3arbasat",
   "name": "mariam-project",
   "private": true,
   "version": "0.0.0",
